--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,14 @@ jobs:
         echo "Login initializing" 
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Login end"
+
+    - name: Build Docker Image
+      run: |
+        docker build -t sr98/docker-graphql:0.0.2 .
+
+    - name: Push Docker Image
+      run: |
+        docker push sr98/docker-graphql:0.0.2 .
         
         
 #   - name: Build the Docker image
