--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Push Docker Image
       run: |
-        docker push sr98/docker-graphql:0.0.2 .
+        docker push sr98/docker-graphql:0.0.2
         
         
 #   - name: Build the Docker image
