--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,22 +17,35 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: tag_version
+      
     - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}   
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}    
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.tag_version.outputs.version }}
       run: |
         echo "Login initializing" 
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Login end"
+        echo "New version: $NEW_VERSION"
 
     - name: Build Docker Image
       run: |
         docker build -t sr98/docker-graphql:0.0.2 .
+        docker build -t sr98/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push sr98/docker-graphql:0.0.2
+        docker push sr98/docker-graphql:latest
         
         
 #   - name: Build the Docker image
